# utils_template

./: .gitignore  MIT License  README.md  main.py  pyproject.toml
utils/: logger_module.py  playwrite_soup.py  requests_soup.py  selenium_soup.py  util.py
