[tool.poetry]
name = "utils-scratches"
version = "0.1.0"
description = ""
authors = ["Dan Nelson <danelson@nwi.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
bs4 = "^0.0.1"
selenium = "^4.16.0"
pandas = "^2.1.4"
fake-useragent = "^1.4.0"
playwright = "^1.41.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
